--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     .box p {
       color: #333;
       font-size: 8vw;
-      font-weight: bold;
+      font-weight: 400;
     }
     .box .timer {
       color: #FFEB60;
